GCP infra completed
